# rapidash

./: .gitignore  README.md  cargo.toml  clippy.toml
cli/: Cargo.toml
cli/doc/: dev.md
cli/src/: args.rs  cli.rs  lib.rs  main.rs  validator.rs
cli/tests/: args.rs
client/: Cargo.toml
client/src/: context.rs
common/: Cargo.toml
common/src/: builder.rs  config.rs  context.rs  delta.rs  error.rs  lib.rs  option.rs  scalar.rs  session.rs
config/: Cargo.toml
config/src/: config.rs  entry.rs  lib.rs
doc/: dev.md  howto.md
docs/: design.md  ray.md
engine/: Cargo.toml  build.rs
engine/proto/: datafusion.proto  rapidash.proto
engine/src/: config.rs  error.rs  lib.rs  plan.rs  prelude.rs  rpc.rs
engine/src/execute/: mod.rs
engine/src/plan/: context.rs  mod.rs  object.rs  planner.rs
error/: Cargo.toml
error/src/: error.rs  lib.rs  result.rs
executor/: Cargo.toml
executor/src/: main.rs
scheduler/: Cargo.toml
scheduler/src/: error.rs  lib.rs  main.rs  prelude.rs  query.rs  rpc.rs
src/: main.rs
transmit/: Cargo.toml  build.rs
transmit/proto/: rapidash.rs
transmit/src/: lib.rs
transmit/src/proto/: rapidash.proto
