[package]
description = "Command Line Client for rapidash"
edition = "2021"
homepage = "https://github.com/lipicoder/rapidash"
license = "Apache-2.0"
name = "rapidash"
repository = "https://github.com/lipicoder/rapidash"
version = "0.1.0"

[dependencies]
clap = {version = "4.0.26", features = ["derive", "cargo"]}
common = {path = "../common"}
log = {version = "0.4.17", features = ["std"]}
mimalloc = {version = "0.1", default-features = false}
tokio = {version = "1.14.0", features = ["macros", "rt-multi-thread"]}

[[test]]
harness = false
name = "arg_test"
path = "tests/args.rs"
