[package]
description = "Config between server and client"
edition = "2021"
homepage = "https://github.com/lipicoder/rapidash"
license = "Apache-2.0"
name = "common"
repository = "https://github.com/lipicoder/rapidash"
version = "0.1.0"

[dependencies]
arrow = {version = "28.0.0", features = ["default"]}
arrow-buffer = "28.0.0"
arrow-schema = {version = "28.0.0"}
chrono = {version = "0.4.23"}
object_store = "0.5.1"
ordered-float = "3.4.0"
parquet = "28.0.0"
sqlparser = "0.27.0"
datafusion = {version = "14.0.0", features = ["avro","pyarrow"]}

[lib]
name = "common"
path = "src/lib.rs"
