[package]
description = "Rapidash scheduler server"
edition = "2021"
homepage = "https://github.com/lipicoder/rapidash"
license = "Apache-2.0"
name = "scheduler"
repository = "https://github.com/lipicoder/rapidash"
version = "0.1.0"

[dependencies]
error = {path = "../error"}
transmit = {path = "../transmit"}
async-trait = "0.1.58"
chrono = "0.4.23"
tokio = {version = "1.22.0", features = ["rt", "rt-multi-thread", "macros"]}
tonic = "0.8.2"
url = "2.3.1"
uuid = {version = "1.2.2", features = ["v4"]}

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]

[lib]
name = "scheduler"
path = "src/lib.rs"

[build-dependencies]
rustc_version = "0.4.0"
tonic-build = {version = "0.8.2", default-features = false, features = ["transport", "prost"]}
